Spacing issues resolved in overlay

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,6 @@ h3 {
 	position: absolute;
 	z-index: 5000;
 	height: auto;
-	top: 5%;
 	background-color: #efefef;
 }
 
@@ -249,7 +248,7 @@ h3 {
 .involveMotto {
 /*	width: 550px;*/
 	height: auto;
-	margin: 100px auto 25px auto;
+	margin: 50px auto 25px auto;
 	display: block;
 	font-size: 50px;
 	padding-top: 0;
